# kepler

./: Cargo.toml  implementation_plan.md
.github/workflows/: ci.yml
doc/: README.md  cad-workflows.md  fem-poisson.md  project-workflows.md  rest-api.md  solver-stack.md  verification.md
examples/: README.md  generate_meshes.rs  poisson_square.rs  solve_gmsh.rs  solve_inp.rs
examples/data/: block.inp  cli_project_inspect_summary.txt  cube_hex8_fine.msh  cube_hex8_small.msh  cube_tet4_fine.msh  cube_tet4_modal.vtk  cube_tet4_poisson.vtk  cube_tet4_small.msh  physical_groups_2d.msh  physical_groups_2d_temperature.vtk  rest_bad_schema_error_response.json  rest_mesh_artifact_upload.json  rest_project_request.json  rest_project_solve_response.json  rest_project_validate_response.json  square.mesh  square.params  square.project.json  square_fine.mesh  square_fine.params  square_fine.solution  square_tri3_fine.msh  square_tri3_small.msh  two_node.solution
src/: annotation.rs  condition.rs  lib.rs  linalg.rs  main.rs  mesh.rs
src/fem/: cms.rs  (+18 more)
tests/: abaqus_import.rs  abaqus_verification.rs  annotations.rs  benchmarks.rs  cad_workflow.rs  cli_cad.rs  cli_project.rs  conditions.rs  contact.rs  diffusion_reaction.rs  elasticity.rs  elasticity_3d.rs  electrostatics.rs  file_io.rs  heat.rs  manufactured_scalar.rs  mesh_import_export.rs  mesh_topology.rs  modal.rs  nonlinear_plasticity.rs  physics_solver_stack.rs  poisson.rs  poisson_3d.rs  project_workflow.rs  solver_stack.rs  structural_verification.rs  thermal_struct.rs  transient_coverage.rs  verification_manifest.rs
(+24 files in other folders)
