[package]
name = "kepler"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
rayon = "1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sprs = "0.11.4"
sprs-ldl = "0.10.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "net"] }
tower = { version = "0.5.3", features = ["util"] }
